Specifies engines and start sripts in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "content-manager-app-api",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "license": "MIT",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1"
